--- a/src/styles/setup/_fonts.scss
+++ b/src/styles/setup/_fonts.scss
@@ -4,27 +4,11 @@
   font-family: "Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
-// .font-h1 {
-//   align-items: center;
-//   border: 1px dotted black;
-//   @include media-breakpoint-up(sm) {
-//     width: 300px;
-//     height: 282px;
-//   }
-//   @include media-breakpoint-up(md) {
-//     width: 530px;
-//     height: 500px;
-//   }
-//   @include media-breakpoint-up(lg) {
-//     width: 695px;
-//     height: 647px;
-//   }
-//   @include media-breakpoint-up(xl) {
-//     width: 695px;
-//     height: 647px;
-//   }
-// }
 .xs-show {
   display: block;
   @include media-breakpoint-up(sm) { display: none; }
+}
+.xs-hide {
+  display: none;
+  @include media-breakpoint-up(sm) { display: initial; }
 }
