--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -21,6 +21,8 @@
     padding: 45px 35px 35px;
     border-radius: 14px;
     position: relative;
+    max-width: 1000px;
+    margin: 0 auto;
 
     li {
       margin-bottom: 0.3em;
