update contact form and email

--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -67,4 +67,12 @@
     margin-left: 20px;
     margin-bottom: 0.8em;
   }
+
+  .form-group {
+    padding-bottom: 20px;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
 }
