--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -20,10 +20,12 @@
   }
 
   .copy-wrapper {
-    margin-top: 50px;
+    margin: 50px auto 0;
     text-align: center;
-    margin: 0 auto;
-    @include media-breakpoint-up(lg) { max-width: 680px }
+    @include media-breakpoint-up(lg) {
+      max-width: 680px;
+      margin-top: 75px;
+    }
 
     .copy {
       margin-top: 1.6em;
