update tiles to be links

--- a/src/styles/_more.scss
+++ b/src/styles/_more.scss
@@ -9,6 +9,20 @@
   .section-content {
     overflow: hidden;
   }
+
+  .tile-link {
+    &:hover {
+      cursor: pointer;
+
+      .link {
+        color: #0a58ca;
+      }
+
+      .link-copy {
+        text-decoration: underline;
+      }
+    }
+  }
 }
 
 @import "more/grid";
